Progress bar text z-index fix to styles

--- a/progressbar/_progressbar.scss
+++ b/progressbar/_progressbar.scss
@@ -5,5 +5,6 @@
 // Correct Zurb styling bug that overlooked displaying low percentage text
 .progress-meter-text {
   transform: translate(-20%, -50%); 
-  margin-left: 5px; 
+  margin-left: 5px;
+  z-index: 1; 
 }
